--- a/Lesson5/lesson5_student.rmd
+++ b/Lesson5/lesson5_student.rmd
@@ -15,8 +15,18 @@ Notes:
 Notes:
 
 ```{r Third Qualitative Variable}
+setwd('C:\\Users\\ransf\\OneDrive\\Documents\\GitHub\\Data-Analysis-With-R\\Lesson3')
+pf <- read.csv("pseudo_facebook.tsv",sep = "\t")
+library(ggplot2)
 ggplot(aes(x = gender, y = age),
-       data = subset(pf, !is.na(gender))) + geom_histogram()
+       data = subset(pf, !is.na(gender))) + geom_boxplot() +
+  stat_summary(fun.y = mean,geom = "point", shape = 4)
+
+ggplot(aes(x = age, y = friend_count),
+       data = subset(pf, !is.na(gender))) + geom_line(aes(color = gender), stat = 'summary', fun.y = median)
+
+pf.fc_by_age_gender <- subset(pf, !is.na(gender)) %>% group_by(age,gender) %>% summarise(mean_friend_count=mean(friend_count),median_friend_count=median(friend_count), n=n())
+  
 ```
 
 ***
@@ -25,7 +35,7 @@ ggplot(aes(x = gender, y = age),
 Notes:
 
 ```{r Plotting Conditional Summaries}
-
+ggplot(pf.fc_by_age_gender, aes(x=age,y=median_friend_count)) + geom_line(aes(color=gender))
 ```
 
 ***
@@ -44,8 +54,7 @@ Notes:
 Notes:
 
 ```{r}
-install.packages('reshape2')
-library(reshape2)
+pf.fc_by_age_gender.wide <- subset(pf.fc_by_age_gender, select = c(age,gender,median_friend_count)) %>% spread(gender,median_friend_count) %>% mutate(ratio = female/male)
 ```
 
 
@@ -55,7 +64,8 @@ library(reshape2)
 Notes:
 
 ```{r Ratio Plot}
-
+ggplot(pf.fc_by_age_gender.wide, aes(x=age,y=ratio)) + geom_line() +
+  geom_hline(linetype = 2, yintercept=1)
 ```
 
 ***
@@ -64,6 +74,10 @@ Notes:
 Notes:
 
 ```{r Third Quantitative Variable}
+pf <- pf %>% mutate(year_joined = as.integer(2014 - (tenure/365)))
+table(pf$year_joined)
+
+
 
 ```
 
@@ -73,7 +87,9 @@ Notes:
 Notes:
 
 ```{r Cut a Variable}
+pf$year_joined.bucket <- cut(pf$year_joined, c(2004,2009,2011,2012,2014))
 
+table(pf$year_joined.bucket)
 ```
 
 ***
@@ -82,7 +98,8 @@ Notes:
 Notes:
 
 ```{r Plotting it All Together}
-
+ggplot(aes(x = age, y = friend_count),
+       data = subset(pf, !is.na(year_joined.bucket))) + geom_line(aes(color = year_joined.bucket), stat = 'summary', fun.y = median)
 ```
 
 ***
