--- a/Lesson5/lesson5_student.rmd
+++ b/Lesson5/lesson5_student.rmd
@@ -18,6 +18,8 @@ Notes:
 setwd('C:\\Users\\ransf\\OneDrive\\Documents\\GitHub\\Data-Analysis-With-R\\Lesson3')
 pf <- read.csv("pseudo_facebook.tsv",sep = "\t")
 library(ggplot2)
+library(dplyr)
+library(tidyr)
 ggplot(aes(x = gender, y = age),
        data = subset(pf, !is.na(gender))) + geom_boxplot() +
   stat_summary(fun.y = mean,geom = "point", shape = 4)
@@ -190,6 +192,9 @@ setwd('C:\\Users\\ransf\\OneDrive\\Documents\\GitHub\\Data-Analysis-With-R\\Less
 yo <- read.csv('yogurt.csv')
 yo$id <- factor(yo$id)
 str(yo)
+
+ggplot(yo,aes(x=price)) + geom_histogram(binwidth=1) + scale_x_continuous(breaks=seq(0,70,5))
+
 ```
 
 ***
@@ -198,7 +203,13 @@ str(yo)
 Notes:
 
 ```{r Number of Purchases}
+?transform
+yo <- transform(yo,all.purchases = strawberry + blueberry + pina.colada + plain + mixed.berry)
+ggplot(yo,aes(x=all.purchases)) + geom_histogram(binwidth=1) + scale_x_continuous(breaks=seq(0,20,1))
 
+
+
+summary(yo$time)
 ```
 
 ***
@@ -207,7 +218,7 @@ Notes:
 Notes:
 
 ```{r Prices over Time}
-
+ggplot(yo,aes(x=time,y=price)) + geom_point()
 ```
 
 ***
@@ -220,7 +231,12 @@ Notes:
 ### Looking at Samples of Households
 
 ```{r Looking at Sample of Households}
+set.seed(2002)
+sample.ids <- sample(levels(yo$id),16)
 
+p1 <- ggplot(subset(yo, id %in% sample.ids), aes(x=time,y=price)) + facet_wrap(~id) + geom_line() + geom_point(aes(size=all.purchases), pch = 1)
+
+ggsave('yogurt_households.jpg',p1)
 ```
 
 ***
@@ -237,6 +253,15 @@ Notes:
 
 ### Scatterplot Matrix
 Notes:
+```{r}
+#install.packages(GGally)
+library(GGally)
+theme_set(theme_minimal(20))
+set.seed(1836)
+pf_subset <- pf[,c(2:15)]
+names(pf_subset)
+ggpairs(pf_subset[sample.int(nrow(pf_subset), 1000),])
+```
 
 ***
 
@@ -254,6 +279,7 @@ colnames(nci) <- c(1:64)
 ```
 
 ```{r}
+library(reshape2)
 nci.long.samp <- melt(as.matrix(nci[1:200,]))
 names(nci.long.samp) <- c("gene", "case", "value")
 head(nci.long.samp)
